<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainFragment">

    <Button
        android:id="@+id/connect"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/query_credentials"
        app:layout_constraintBottom_toTopOf="@+id/subscribe"
        app:layout_constraintEnd_toStartOf="@+id/history"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/history"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/publish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/connect"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/history" />

    <Button
        android:id="@+id/subscribe"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/subscribe"
        app:layout_constraintBottom_toTopOf="@+id/unsubscribe"
        app:layout_constraintEnd_toStartOf="@+id/publish"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connect" />

    <Button
        android:id="@+id/publish"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/publish"
        app:layout_constraintBottom_toTopOf="@+id/presence"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/subscribe"
        app:layout_constraintTop_toBottomOf="@+id/history" />

    <Button
        android:id="@+id/unsubscribe"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/unsubscribe"
        app:layout_constraintBottom_toTopOf="@+id/disconnect"
        app:layout_constraintEnd_toStartOf="@+id/presence"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subscribe" />

    <Button
        android:id="@+id/disconnect"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/disconnect"
        app:layout_constraintEnd_toStartOf="@+id/refresh"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/unsubscribe" />

    <Button
        android:id="@+id/presence"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/presence"
        app:layout_constraintBottom_toTopOf="@+id/refresh"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/unsubscribe"
        app:layout_constraintTop_toBottomOf="@+id/publish" />

    <Button
        android:id="@+id/refresh"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/refresh"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/disconnect"
        app:layout_constraintTop_toBottomOf="@+id/presence" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="disconnect,refresh" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/logRv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@id/barrier"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
